further css js restructure

--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
         <button id="export-chores">Export Chore Data</button>
     </div>
     <script src="https://apis.google.com/js/api.js"></script>
+    <script src="eventSystem.js"></script>
     <script src="dateTime.js"></script>
     <script src="weather.js"></script>
     <script src="calendar.js"></script>
@@ -140,6 +141,7 @@
     <script src="dragResize.js"></script>
     <script src="chores.js"></script>
     <script src="config.js"></script>
+    <script src="ui.js"></script>
     <script src="main.js"></script>
 </body>
 </html>
