Toggle function working with shedule
ggood point to restore to

--- a/index.html
+++ b/index.html
@@ -128,7 +128,6 @@
         </div>
     </div>
     <div id="chore-controls">
-        <button id="reset-chores">Reset All Chores</button>
         <button id="export-chores">Export Chore Data</button>
     </div>
     <script src="https://apis.google.com/js/api.js"></script>
@@ -139,8 +138,9 @@
     <script src="iosAlbum.js"></script>
     <script src="contentCycling.js"></script>
     <script src="dragResize.js"></script>
-    <script src="chores.js"></script>
+    <script src="choreToggle.js"></script>
     <script src="config.js"></script>
+    <script src="chores.js"></script>
     <script src="ui.js"></script>
     <script src="main.js"></script>
 </body>
