--- a/index.html
+++ b/index.html
@@ -105,23 +105,9 @@
         <div class="popup-content">
             <h2>Configure Chore Timing</h2>
             <p>Chore: <span id="popup-chore-name"></span></p>
-            <button id="all-days-button">All Days</button>
-            <div class="day-selection">
-                <label><input type="checkbox" name="day" value="Monday"><span>Mon</span></label>
-                <label><input type="checkbox" name="day" value="Tuesday"><span>Tue</span></label>
-                <label><input type="checkbox" name="day" value="Wednesday"><span>Wed</span></label>
-                <label><input type="checkbox" name="day" value="Thursday"><span>Thu</span></label>
-                <label><input type="checkbox" name="day" value="Friday"><span>Fri</span></label>
-                <label><input type="checkbox" name="day" value="Saturday"><span>Sat</span></label>
-                <label><input type="checkbox" name="day" value="Sunday"><span>Sun</span></label>
-            </div>
             <div class="time-selection">
-                <label for="chore-time-1">Time 1:</label>
-                <input type="time" id="chore-time-1">
-            </div>
-            <div class="time-selection">
-                <label for="chore-time-2">Time 2:</label>
-                <input type="time" id="chore-time-2">
+                <label for="chore-time">Time:</label>
+                <input type="time" id="chore-time">
             </div>
             <button id="save-config">Save</button>
             <button id="close-popup">Close</button>
