good schedule fucntion
All good with schedule but cant click job to complete

--- a/index.html
+++ b/index.html
@@ -105,6 +105,15 @@
         <div class="popup-content">
             <h2>Configure Chore Timing</h2>
             <p>Chore: <span id="popup-chore-name"></span></p>
+            <div class="day-selection">
+                <label><input type="checkbox" name="day" value="mon"><span>Mon</span></label>
+                <label><input type="checkbox" name="day" value="tue"><span>Tue</span></label>
+                <label><input type="checkbox" name="day" value="wed"><span>Wed</span></label>
+                <label><input type="checkbox" name="day" value="thu"><span>Thu</span></label>
+                <label><input type="checkbox" name="day" value="fri"><span>Fri</span></label>
+                <label><input type="checkbox" name="day" value="sat"><span>Sat</span></label>
+                <label><input type="checkbox" name="day" value="sun"><span>Sun</span></label>
+            </div>
             <div class="time-selection">
                 <label for="chore-time">Time:</label>
                 <input type="time" id="chore-time">
